--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven{
+        name "getui-nexus"
+        url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
+    }
+
 }
 
 dependencies {
@@ -15,6 +20,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     // Guava java 类封装
     compile 'com.google.guava:guava:21.0'
+
+    // 推送依赖
+    compile 'com.gexin.platform:gexin-rp-sdk-http:4.0.1.7'
 
     // Jersey 轻量级Restful接口框架
     compile 'org.glassfish.jersey.core:jersey-client:2.26-b03'
@@ -30,6 +38,7 @@ dependencies {
     compile 'org.hibernate:hibernate-entitymanager:5.2.9.Final'
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0
     compile 'org.hibernate:hibernate-c3p0:5.2.9.Final'
+
 
     // MySQL 驱动库
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
